2005-05-08  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]: some code cleanup.

2005-05-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_entry_new)
	(gimp_prop_entry_notify): don't call gtk_entry_set_text() with a
	NULL text.

2005-05-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpbaseconfig.c: limit the tile-cache-size to
	G_MAXULONG or GIMP_MAX_MEMSIZE, whatever is smaller. Fixes
	bug #303371.

2005-05-07  Manish Singh  <yosh@gimp.org>

	* tools/pdbgen/pdb/image.pdb: Fix a typo reported in bug #303379.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-commands.c (edit_undo_clear_cmd_callback): tell
	the user how much memory will be freed by clearing the undo history.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.[ch]
	* app/tools/gimptool.[ch]: unified tool and paint-tool statusbar APIs.

	* app/tools/gimpblendtool.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpcolortool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimprectselecttool.c
	* app/tools/gimpvectortool.c: changed accordingly.

	* app/tools/gimpselectiontool.c: give more hints in the statusbar.
	Some of the selection tools should probably override these.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimppreviewcache.c: minor code cleanup.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpselectionoptions.c: added modifier keys to the
	tooltips of the selection mode buttons.

	* app/dialogs/preferences-dialog.c: removed the GUI for the
	"default-threshold" preference.

	* app/tools/gimpmagnifyoptions.c: removed the GUI for the
	Threshold option; it was more confusing than useful.
