@@ -1,5 +1,10 @@
 2005-05-08  Sven Neumann  <sven@gimp.org>
 
+	* app/dialogs/layer-options-dialog.c (layer_options_dialog_new):
+	always set "activates-default" on the name entry.
+
+2005-05-08  Sven Neumann  <sven@gimp.org>
+
 	* app/base/tile-manager.[ch]: some code cleanup.
 
 2005-05-08  Michael Natterer  <mitch@gimp.org>
